--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="keywords" content="coolmaths, coolmath, math, maths, game, games, free, online, fun, coolmaths, coolmath, math, maths, game, games, free, online, fun, idle, breakout, break, out" />
 <link rel="canonical" href="//www.coolmathgames.com/0-idle-breakout" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://www.coolmathgames.com/0-idle-breakout" />
+<meta property="og:url" content="https://github.io/JE5143/IdleBreakout" />
 <meta property="og:title" content="Idle Breakout" />
     	<title>Idle Breakout - Play it now at CoolmathGames.com</title>
   
