--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   
  <!-- Load MBOX First -->
-  <script type="text/javascript" src="/sites/cmatgame/files/mbox.js"></script>
+  <script type="text/javascript" src="https://coolmathgames.com/sites/cmatgame/files/mbox.js"></script>
   <!-- Prebid Boilerplate Section START. No Need to Edit. -->
 
     <link type="text/css" rel="stylesheet" href="//www.coolmathgames.com/sites/cmatgame/files/css/css_Jr-FtsqfAA9h9Ye3Mw2KqSTFQEog4nT7N7Qo-WpCglQ.css" media="all" />
@@ -1363,7 +1363,7 @@ function ThumbsupNode(nodeId, votestatus, id ,type) {
 
                     <!-- Pre-Content Video Player -->
         <div id="my-content">
-        
+        oof
           <div class="field-game" id="swfgamewrapper">
             <iframe1 src="https://www.coolmathgames.com/0-idle-breakout/play" class="square" width="800px" height="600px" id="html5game" scrolling="no"></iframe1>
           </div>
