--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@ function ThumbsupNode(nodeId, votestatus, id ,type) {
         <div id="my-content">
         oof
           <div class="field-game" id="swfgamewrapper">
-            <iframe1 src="https://www.coolmathgames.com/0-idle-breakout/play" class="square" width="800px" height="600px" id="html5game" scrolling="no"></iframe1>
+            <iframe1 src="/play" class="square" width="800px" height="600px" id="html5game" scrolling="no"></iframe1>
           </div>
 
         </div>
