--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta content="//www.coolmathgames.com/sites/cmatgame/files/idle-breakout.png" property="og:image" />
 <meta name="description" content="Idle Breakout at Cool Math Games: Ever play Breakout? Build the ultimate brick-busting machine! Buy and upgrade balls to destroy billions of bricks." />
 <meta name="keywords" content="coolmaths, coolmath, math, maths, game, games, free, online, fun, coolmaths, coolmath, math, maths, game, games, free, online, fun, idle, breakout, break, out" />
-<link rel="canonical" href="//www.coolmathgames.com/0-idle-breakout" />
+<link rel="canonical" href="https://github.io/JE5143/IdleBreakout" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://github.io/JE5143/IdleBreakout" />
 <meta property="og:title" content="Idle Breakout" />
