--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <meta content="//www.coolmathgames.com/sites/cmatgame/files/idle-breakout.png" property="og:image" />
 <meta name="description" content="Idle Breakout at Cool Math Games: Ever play Breakout? Build the ultimate brick-busting machine! Buy and upgrade balls to destroy billions of bricks." />
 <meta name="keywords" content="coolmaths, coolmath, math, maths, game, games, free, online, fun, coolmaths, coolmath, math, maths, game, games, free, online, fun, idle, breakout, break, out" />
-<link rel="canonical" href="//www.coolmathgames.com/0-idle-breakout" />
+<link rel="canonical" href="https://github.io/JE5143/IdleBreakout" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://www.coolmathgames.com/0-idle-breakout" />
+<meta property="og:url" content="https://github.io/JE5143/IdleBreakout" />
 <meta property="og:title" content="Idle Breakout" />
     	<title>Idle Breakout - Play it now at CoolmathGames.com</title>
   
   
  <!-- Load MBOX First -->
-  <script type="text/javascript" src="/sites/cmatgame/files/mbox.js"></script>
+  <script type="text/javascript" src="https://coolmathgames.com/sites/cmatgame/files/mbox.js"></script>
   <!-- Prebid Boilerplate Section START. No Need to Edit. -->
 
     <link type="text/css" rel="stylesheet" href="//www.coolmathgames.com/sites/cmatgame/files/css/css_Jr-FtsqfAA9h9Ye3Mw2KqSTFQEog4nT7N7Qo-WpCglQ.css" media="all" />
@@ -1363,9 +1363,9 @@ function ThumbsupNode(nodeId, votestatus, id ,type) {
 
                     <!-- Pre-Content Video Player -->
         <div id="my-content">
-        
+        oof
           <div class="field-game" id="swfgamewrapper">
-            <iframe1 src="https://www.coolmathgames.com/0-idle-breakout/play" class="square" width="800px" height="600px" id="html5game" scrolling="no"></iframe1>
+            <iframe1 src="/play" class="square" width="800px" height="600px" id="html5game" scrolling="no"></iframe1>
           </div>
 
         </div>
