--- a/play.html
+++ b/play.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="/Coding_BreakOut1.js"></script>
+        <script type="text/javascript" src="Coding_BreakOut1.js"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
