--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 #views-slideshow-bxslider-1.views-slideshow-bxslider .bx-wrapper .bx-caption{background:rgba(80,80,80,0.75)}
 </style>
 <link type="text/css" rel="stylesheet" href="//www.coolmathgames.com/sites/cmatgame/files/css/css_XrFgoLF0V74O1flnn-aolx6OOf38fEyf4hOTVGvApus.css" media="all" />
-<link type="text/css" rel="stylesheet" href="//https://JE5143.github.io/IdleBreakout/html5game/css_edJf0_uXgb-NhELCf611HSNNLr_zPBwZvhjQ8Km-JMk.css" media="all" />
+<link type="text/css" rel="stylesheet" href="//JE5143.github.io/IdleBreakout/html5game/css_edJf0_uXgb-NhELCf611HSNNLr_zPBwZvhjQ8Km-JMk.css" media="all" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
 <script>window.jQuery || document.write("<script src='/profiles/dsk/modules/contrib/jquery_update/replace/jquery/1.8/jquery.js'>\x3C/script>")</script>
 <script src="//www.coolmathgames.com/sites/cmatgame/files/js/js_dWhBODswdXXk1M5Z5nyqNfGljmqwxUwAK9i6D0YSDNs.js"></script>
